[package]
name = "bevy_js_cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
async-std = "1.12.0"
once_cell = "1.17.1"
wasm-bindgen-futures = "0.4.34"

[dependencies.bevy]
version = "0.9.1"
default_features = false
features = ["bevy_asset", "bevy_core_pipeline", "bevy_sprite", "bevy_render", "bevy_winit"]
